# cpp_task4

./: CMakeLists.txt  dictionary.cpp  dictionary.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Google_tests/: CMakeLists.txt  DictionaryTest.cpp  LoggerTest.cpp  MockMainWindowTest.cpp
